# codepeek

./: CLAUDE.md  Cargo.toml  README.md  justfile
apps/tui/: Cargo.toml  README.md
apps/tui/src/: config.rs  main.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: change.rs  diff.rs  error.rs  highlight.rs  lib.rs  traits.rs
crates/git/: Cargo.toml  README.md
crates/git/src/: detector.rs
crates/git/tests/: integration.rs
crates/syntax/: Cargo.toml  README.md
crates/syntax/src/: highlighter.rs  languages.rs  lib.rs  mapping.rs
crates/view/: Cargo.toml  README.md
crates/view/src/: action.rs  app.rs  components.rs  config.rs  keybindings.rs  layout.rs  lib.rs  render_helpers.rs  theme.rs
crates/view/src/components/: error_bar.rs  file_list.rs  file_viewer.rs  peek_overlay.rs  status_bar.rs
crates/widgets/: Cargo.toml
crates/widgets/src/: lib.rs
docs/: decisions.md
docs/plans/: 2026-04-04--change-viewer.md  2026-04-05--config-centralization.md  2026-04-07--multi-view-homepage.md
