[workspace]
resolver = "3"
members = [
    "apps/tui",
    "crates/core",
    "crates/widgets",
]

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/codepeekhq/codepeek"

[workspace.dependencies]
# Internal crates
codepeek-core = { path = "crates/core" }
codepeek-widgets = { path = "crates/widgets" }

# TUI
ratatui = "0.30.0"

# Error handling
color-eyre = "0.6.5"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
