[workspace]
resolver = "3"
members = [
    "apps/tui",
    "crates/core",
    "crates/git",
    "crates/syntax",
    "crates/view",
]

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/codepeekhq/codepeek"

[workspace.dependencies]
# Internal crates
codepeek-core = { path = "crates/core" }
codepeek-git = { path = "crates/git" }
codepeek-syntax = { path = "crates/syntax" }
codepeek-view = { path = "crates/view" }

# TUI
ratatui = "0.30.0"
crossterm = "0.29.0"

# Git
git2 = { version = "0.20.4", features = ["vendored-libgit2"] }

# Syntax highlighting
tree-sitter = "0.26.8"
tree-sitter-highlight = "0.26.8"
tree-sitter-language = "0.1.7"
tree-sitter-rust = "0.24.2"
tree-sitter-python = "0.25.0"
tree-sitter-javascript = "0.25.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-go = "0.25.0"
tree-sitter-c = "0.24.1"
tree-sitter-cpp = "0.23.4"
tree-sitter-java = "0.23.5"
tree-sitter-ruby = "0.23.1"
tree-sitter-toml-ng = "0.7.0"
tree-sitter-json = "0.24.8"
tree-sitter-bash = "0.25.1"
tree-sitter-css = "0.25.0"
tree-sitter-html = "0.23.2"
tree-sitter-yaml = "0.7.2"
tree-sitter-lua = "0.5.0"
tree-sitter-md = "0.5.3"

# Error handling
color-eyre = "0.6.5"
thiserror = "2.0.18"

# Testing
tempfile = "3.27.0"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
