[package]
name = "codepeek"
version = "0.1.0"
description = "Terminal-native development tool for AI-assisted coding workflows"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
codepeek-core.workspace = true
codepeek-git.workspace = true
codepeek-syntax.workspace = true
codepeek-view.workspace = true
ratatui.workspace = true
color-eyre.workspace = true
serde.workspace = true
toml.workspace = true
dirs.workspace = true

[lints]
workspace = true
