[package]
name = "codepeek-git"
version = "0.1.0"
description = "Git-based change detection and diff computation for codepeek"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
codepeek-core.workspace = true
git2.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
